# chatgpt_lifecoach

./: README.md  pyproject.toml
motivational_sms/: call_prompts.py  chatgpt.py  long_prompts.py  main.py  sms.py
